# psychophysics

./: .gitignore  analysis.py  pyproject.toml
data/: D001.csv  P000.csv  P001.csv  P002.csv  P003.csv  P004.csv  P005.csv
