[tool.poetry]
name = "psychophysics"
version = "0.1.0"
description = ""
authors = ["CMBA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymc = "^5.6.1"
numpyro = "^0.12.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
